# entelect-challenge-2025

./: .editorconfig  .flake8  .gitignore  README.md  pyproject.toml  resources.json
entelect_challenge/: main.py
node/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
node/input/: 1.txt  2.txt  3.txt  4.txt  resources.json
node/src/: brute-force.ts  get-resources.ts  grid.ts  grid2.ts  index.ts  index2.ts  input-reader.ts  resource-reader.ts  score.ts  worker.ts  write-output.ts
node/src/types/: grid.ts  resources.ts
python/: pyproject.toml
python/entelect_challenge/: __init__.py
tests/: test_challenge.py
