[tool.poetry]
name = "entelect-challenge-2025"
version = "0.1.0"
description = "Solution for the Entelect Challenge 2025"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "entelect_challenge" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.1"
pandas = "^2.1.0"
networkx = "^3.2"
matplotlib = "^3.8.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.0"
mypy = "^1.7.0"

[tool.poetry.scripts]
challenge = "entelect_challenge.main:main"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
